--- a/pictures.html
+++ b/pictures.html
@@ -14,7 +14,7 @@
     <li>Pool</li>
   </ul>
 
-  <img src="" alt="Room">
-  <img src="" alt="Pool">
+  <img src="https://picsum.photos/200" alt="Room">
+  <img src="https://picsum.photos/200" alt="Pool">
 </body>
 </html>
